Small bug of too big button

--- a/frontend/src/app/edit/edit.component.scss
+++ b/frontend/src/app/edit/edit.component.scss
@@ -404,6 +404,7 @@ div[contenteditable="true"]:focus {
     display: none;
     left: 0;
     margin: 10px;
+    height: 37.7px;
 }
 
 //REGION Below are all the stylings for the document editor.
